Added playing with functions frame and diagram.

--- a/fibs/FibsPresentation.tex
+++ b/fibs/FibsPresentation.tex
@@ -542,4 +542,86 @@ fibs = 1 : 1 : [2, 3, 5]
             \caption{Define only the first two fibs, then use some programmatic definition for the rest of the sequence.}
         \end{figure}
     \end{frame}
+
+% FRAME:PLAYING WITH FUNCTIONS
+    \begin{frame}[fragile=singleslide]
+        \frametitle{Playing with Functions}
+
+        \begin{figure}
+            \begin{lstlisting}
+fibs = 1 : 1 : [2, 3, 5, 8]
+// fibs = [1, 1, 2, 3, 5, 8]
+
+t = tail fibs
+// t = [1, 2, 3, 5, 8]
+
+z = zip fibs (tail fibs)
+// z = [(1,1), (1,2), (2,3), (3,5), (5,8)]
+            \end{lstlisting}
+        \end{figure}
+    \end{frame}
+
+% FRAME:PLAYING WITH FUNCTIONS DIAGRAM
+    \begin{frame}[fragile=singleslide]
+        \frametitle{Playing with Functions}
+
+        \adjustbox{scale=0.7} {
+            \begin{tikzpicture}[
+            list/.style={
+                rectangle split,
+                rectangle split parts=2,
+                draw,
+                rectangle split horizontal
+            },
+            blue dotted/.style={
+                draw=blue!50!white,
+                line width=1pt,
+                dash pattern=on 1pt off 4pt on 6pt off 4pt,
+                inner sep=4mm,
+                rectangle,
+                rounded corners
+            },
+            node distance=2mm and 1cm]
+                { [start chain=zip]
+                    \node[list,on chain] (A1) {(1,1)};
+                    \node[list,on chain] (A2) {(1,2)};
+                    \node[list,on chain] (A3) {(2,3)};
+                    \node[on chain,draw,rectangle] (zip) {zip};
+                    { [start branch=letters going right]
+                        \node[list,on chain, above=2cm] (B1) {3};
+                        \node[list,on chain] (B2) {5};
+                        \node[on chain,draw,inner sep=6pt] (B3) {};
+                   
+                        \draw (B3.north east) -- (B3.south west);
+                        \draw[*->] let \p1 = (B1.two), \p2 = (B1.center) in (\x1,\y2) -- (B2);
+                        \draw[*->] let \p1 = (B2.two), \p2 = (B2.center) in (\x1,\y2) -- (B3);
+                        \draw[->] (zip) -- (B1);
+
+                        \node (letters dotted box) [blue dotted, fit = (B1) (B3)] {};
+                        \node at (letters dotted box.north) [above, inner sep=3mm] {\textbf{fibs}};
+                    }
+                    { [start branch=numbers going right]
+                        \node[list,on chain, below=2cm] (C1) {5};
+                        \node[list,on chain] (C2) {8};
+                        \node[on chain,draw,inner sep=6pt] (C3) {};
+                        
+                        \draw (C3.north east) -- (C3.south west);
+                        \draw[*->] let \p1 = (C1.two), \p2 = (C1.center) in (\x1,\y2) -- (C2);
+                        \draw[*->] let \p1 = (C2.two), \p2 = (C2.center) in (\x1,\y2) -- (C3);
+                        \draw[->] (zip) -- (C1);
+
+                        \node (numbers dotted box) [blue dotted, fit = (C1) (C3)] {};
+                        \node at (numbers dotted box.north) [above, inner sep=3mm] {\textbf{tail fibs}};
+                    }
+
+                    \draw[*->] let \p1 = (A1.two), \p2 = (A1.center) in (\x1,\y2) -- (A2);
+                    \draw[*->] let \p1 = (A2.two), \p2 = (A2.center) in (\x1,\y2) -- (A3);
+                    \draw[*->] let \p1 = (A3.two), \p2 = (A2.center) in (\x1,\y2) -- (zip);
+
+                    \node (zip dotted box) [blue dotted, fit = (A1) (A3)] {};
+                    \node at (zip dotted box.north) [above, inner sep=3mm] {\textbf{Pairs of n-1 and n-2}};
+                }
+            \end{tikzpicture}
+        }
+    \end{frame}
 \end{document}
