Fixed image locaitons.

--- a/fibs/FibsPresentation.tex
+++ b/fibs/FibsPresentation.tex
@@ -123,7 +123,7 @@
             \begin{column}[T]{5cm}
                 \begin{figure}
                     \centering
-                    \includegraphics[height=3cm]{./images/FibonacciBlocks.png}
+                    \includegraphics[height=3cm]{./fibs/images/FibonacciBlocks.png}
                 \end{figure}
 
                 \begin{figure}
@@ -222,7 +222,7 @@ fibs = 1 : 1 : [ a + b | (a, b) <- zip fibs (tail fibs) ]
     \begin{frame}[fragile=singleslide]
         \begin{figure}
             \centering
-            \includegraphics[scale=0.35]{./images/lolwutpear.jpg}
+            \includegraphics[scale=0.35]{./fibs/images/lolwutpear.jpg}
         \end{figure}
     \end{frame}
 
@@ -671,7 +671,7 @@ main = do
     \begin{frame}[fragile=singleslide]
         \begin{figure}
             \centering
-            \includegraphics[scale=0.35]{./images/dalek-to-victory.jpg}
+            \includegraphics[scale=0.35]{./fibs/images/dalek-to-victory.jpg}
         \end{figure}
     \end{frame}
 
