Fixed typo in fibs presentation.

--- a/fibs/FibsPresentation.tex
+++ b/fibs/FibsPresentation.tex
@@ -103,7 +103,7 @@
 			\item Encourage further research and interest in Haskell
 		\end{itemize}
 		
-		Prior knowledge in functional programming is not require, but 
+		Prior knowledge in functional programming is not required, but 
 		programming experience is helpful.
 	\end{frame}
 
