Added twitter handle.

--- a/fibs/FibsPresentation.tex
+++ b/fibs/FibsPresentation.tex
@@ -835,6 +835,7 @@ fibs = 1 : 1 : [ a + b | (a, b) <- zip fibs (tail fibs) ]
 		Contact Me
 		\begin{itemize}
 			\item[Email] andrewrademacher@gmail.com
+            \item[Twitter] @AndRademacher
 			\item[GitHub] https://github.com/AndrewRademacher
 			\item[LinkedIn] http://www.linkedin.com/in/andrewrademacher
 		\end{itemize}
